--- a/tiendaweb/principal/Templates/navbar.html
+++ b/tiendaweb/principal/Templates/navbar.html
@@ -150,7 +150,7 @@
               {% endif %}
               </ul>
             </ul>
-            <a href="{% url 'carrito' %}" style="margin-left: 20px">
+            <a href="{% url 'mostrar_carrito' %}" style="margin-left: 20px">
               <img src="{% static 'fotos/carrito.png' %}" alt="carrito" />
             </a>
           </div>
