--- a/tiendaweb/principal/Templates/index.html
+++ b/tiendaweb/principal/Templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'navbar.html' %}
 {% load static %}
+{% load humanize %}
 {% block body %}
     <div class="container-fluid">
       <div
@@ -64,9 +65,9 @@
         class="cuadrado-vista-producto h-100 w-100 mt-3"
         style="text-align: center"> 
         {% if user.is_authenticated %}
-        <h1>PRODUCTOS DESTACADOS PARA : {{user.username}}</h1>
+          <h1>PRODUCTOS DESTACADOS PARA  {{user.first_name}}</h1>
         {% else %}
-        <h1>PRODUCTOS DESTACADOS</h1>
+          <h1>PRODUCTOS DESTACADOS</h1>
         {% endif %}
 
       </div>
@@ -92,12 +93,12 @@
                     </p>
                   </div>
                   <div class="card-footer" style="text-align: center">
-                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio|intcomma }}</p>
                     <hr />
-                    <a href="{% url 'carrito' %}">
+                    <a href="{% url 'agregar_carrito' producto.id_producto %}">
                       <button
                         type="button"
-                        class="btn btn-dark"
+                        class="btn btn-success"
                         style="margin-bottom: 5px"
                       >
                         AÑADIR AL CARRITO
