--- a/tiendaweb/principal/Templates/productos_admin.html
+++ b/tiendaweb/principal/Templates/productos_admin.html
@@ -25,7 +25,7 @@
                   </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                  <p style="font-weight: bold">PRECIO: ${{ producto.precio|intcomma }}</p>
                   <hr />
                   <a href="{% url 'modprod' producto.id_producto %}">
                     <button
