Agregamos funcion de buscar producto, boleta del carrito.

--- a/tiendaweb/principal/Templates/carrito.html
+++ b/tiendaweb/principal/Templates/carrito.html
@@ -55,7 +55,7 @@
             <br>
             <br>
             <a href="{% url 'inicio'  %}">
-              <button class="btn btn-info " style="font-weight: bolder;width: 100%" >Seguir comprando</button>
+              <button class="btn btn-primary " style="font-weight: bolder;width: 100%" >Seguir comprando</button>
             </a>
           {% endif %}
           </div>
@@ -67,5 +67,4 @@
   <script src="https://code.jquery.com/jquery-3.7.1.js">
   </script>
   <script src="{% static 'jquery.js' %}"></script>  
-
-{% endblock %}
+  {% endblock %}
