--- a/tiendaweb/principal/Templates/info_pedido.html
+++ b/tiendaweb/principal/Templates/info_pedido.html
@@ -36,10 +36,9 @@
         </li>
     </ul>
     <div class="card-footer d-flex justify-content-center">
-        <a href="{% url 'borrar_carrito'  %}">
-            <button class="btn btn-info " style="font-weight: bolder;width: 100%">Comprar</button>
+        <a href="{% url 'boleta'  %}">
+            <button class="btn btn-primary " style="font-weight: bolder;width: 100%">Comprar</button>
         </a>
     </div>
 </div>
-
 {% endblock %}
