--- a/tiendaweb/principal/Templates/productos.html
+++ b/tiendaweb/principal/Templates/productos.html
@@ -44,5 +44,5 @@
         {%endfor%}
       </div>
     </div>
-
+    <footer data-bs-theme="dark" class='footer'>©2024 DUOC UC</footer>
     {% endblock  %}
