--- a/tiendaweb/principal/Templates/productos_admin.html
+++ b/tiendaweb/principal/Templates/productos_admin.html
@@ -1,5 +1,6 @@
 {% extends 'navbar.html' %}
 {% load static %}
+{% load humanize %}
 {% block body %}
 
     <div class="Titulo_prod"><h1 style="text-align: center"> ADMINISTRAR PRODUCTOS</h1></div>
@@ -73,5 +74,5 @@
         {%endfor%}
       </div>
     </div>
-
+    <footer data-bs-theme="dark">©2024 DUOC UC</footer>
     {% endblock  %}
