--- a/tiendaweb/principal/Templates/perfil_usuario.html
+++ b/tiendaweb/principal/Templates/perfil_usuario.html
@@ -82,4 +82,6 @@
             </div>
         </div>
     </div>
+    <footer data-bs-theme="dark" class='footer'>©2024 DUOC UC</footer>
+
 {% endblock %}
