Se agregó filtrar por categorias en el navbar (Consolas, Celulares, Laptops, Perifericos), tambien, se hizo que el usuario deba iniciar sesión para comprar o añadir un producto al carrito

--- a/tiendaweb/principal/Templates/agregar_prod.html
+++ b/tiendaweb/principal/Templates/agregar_prod.html
@@ -40,6 +40,10 @@
                           <input type="text" class="form-control" id="descripcion"  placeholder="Ingresa descripcion" name="descripcion">
                         </div>
                         <div class="my-2">
+                            <label for="imagen" class="form-label">Marca</label>
+                            <input type="text" class="form-control" id="marca"  placeholder="Ingresa marca" name="marca">
+                        </div>
+                        <div class="my-2">
                             <label for="imagen" class="form-label">Imagen</label>
                             <input type="file" class="form-control" id="imagen"  placeholder="Ingresa imagen" name="imagen">
                         </div>
