--- a/tiendaweb/principal/Templates/vista_producto.html
+++ b/tiendaweb/principal/Templates/vista_producto.html
@@ -26,7 +26,6 @@
                       {{producto.descripcion}}
                     </p>
                   </div>
-                  <!-- Botones -->
                 </div>
               </div>
             </div>
@@ -40,32 +39,104 @@
                   >
                     <p style="font-weight: bolder">PRECIO: ${{producto.precio|intcomma}}</p>
                   </div>
-                  {% if user.is_superuser %}
+
+                  {% if user.is_authenticated %}
+                    {% if user.is_superuser %}
                   
+                    {% else %}
+                      <div class="col-12">
+                        <a href="{% url 'comprar_producto' producto.id_producto%}">
+                          <button
+                            class="btn btn-primary"
+                            type="button"
+                            style="margin-bottom: 5px"
+                          >
+                            COMPRAR
+                          </button>
+                        </a>
+                      </div>
+                      <div class="col-12">
+                        <a href="{% url 'agregar_carrito' producto.id_producto%}">
+                          <button
+                            type="button"
+                            class="btn btn-success"
+                            style="margin-bottom: 5px"
+                          >
+                            AÑADIR AL CARRITO
+                          </button>
+                        </a>
+                      </div>
+                    {% endif %}
                   {% else %}
                     <div class="col-12">
-                      <a href="{% url 'comprar_producto' producto.id_producto%}">
+                      <a>
                         <button
                           class="btn btn-primary"
                           type="button"
                           style="margin-bottom: 5px"
+                          data-bs-toggle="modal"
+                          data-bs-target="#iniciar2"
                         >
                           COMPRAR
                         </button>
                       </a>
                     </div>
                     <div class="col-12">
-                      <a href="{% url 'agregar_carrito' producto.id_producto%}">
+                      <a>
                         <button
                           type="button"
                           class="btn btn-success"
                           style="margin-bottom: 5px"
+                          data-bs-toggle="modal"
+                          data-bs-target="#iniciar"
                         >
                           AÑADIR AL CARRITO
                         </button>
                       </a>
                     </div>
                   {% endif %}
+                  <div class="modal" tabindex="-1" id="iniciar">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title">Para añadir un producto al carrito debe iniciar sesión</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <p>Inicia sesión o registrate.</p>
+                        </div>
+                        <div class="modal-footer">
+                        <a href="{% url 'login' %}" >
+                          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" style="float: left;">Iniciar Sesión</button>
+                        </a>
+                        <a href="{% url 'registro' %}" >
+                          <button type="button" class="btn btn-success" style="float: right;">Registrarse</button>
+                        </a>
+                        </div>
+                      </div>
+                    </div>  
+                  </div>
+                  <div class="modal" tabindex="-1" id="iniciar2">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title">Para comprar un producto debe iniciar sesión</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <p>Inicia sesión o registrate.</p>
+                        </div>
+                        <div class="modal-footer">
+                        <a href="{% url 'login' %}" >
+                          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" style="float: left;">Iniciar Sesión</button>
+                        </a>
+                        <a href="{% url 'registro' %}" >
+                          <button type="button" class="btn btn-success" style="float: right;">Registrarse</button>
+                        </a>
+                        </div>
+                      </div>
+                    </div>  
+                  </div>
                 </div>
               </div>
             </div>
