--- a/tiendaweb/principal/Templates/navbar.html
+++ b/tiendaweb/principal/Templates/navbar.html
@@ -40,62 +40,42 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item dropdown">
                 <a
-                  class="nav-link active dropdown-toggle"
-                  href="#"
+                  class="nav-link active"
+                  type='button'
+                  href="{% url 'celulares' %}"
                   role="button"
-                  data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Perifericos
+                  Celulares
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
                 <a
-                  class="nav-link active dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
+                class="nav-link active"
+                type='button'
+                href="{% url 'consolas' %}"
+                role="button"
+                aria-expanded="false"
                 >
-                  Consolas
+                Consolas
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
                 <a
-                  class="nav-link active dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
+                class="nav-link active"
+                type='button'
+                href="{% url 'laptops' %}"
+                role="button"
+                aria-expanded="false"
                 >
-                  Hardware
+                Laptops
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
+                <a
+                class="nav-link active"
+                type='button'
+                href="{% url 'perifericos' %}"
+                role="button"
+                aria-expanded="false"
+                >
+                Perifericos
+                </a>
               </li>
               <li class="nav-item">
                 <a
@@ -113,7 +93,7 @@
                 placeholder="Buscar producto..."
                 aria-label="Search"
                 name='buscar'
-                value={{busqueda}}
+                value='{{request.GET.buscar}}'
               />
               <button class="btn btn-outline-success" type="submit">
                 Buscar
@@ -151,9 +131,13 @@
               {% endif %}
               </ul>
             </ul>
-            <a href="{% url 'mostrar_carrito' %}" style="margin-left: 20px">
-              <img src="{% static 'fotos/carrito.png' %}" alt="carrito" />
-            </a>
+            {% if user.is_authenticated %}
+              <a href="{% url 'mostrar_carrito' %}" style="margin-left: 20px">
+                <img src="{% static 'fotos/carrito.png' %}" alt="carrito" />
+              </a>
+            {% else %}
+
+            {% endif %}
           </div>
         </div>
       </nav>
