--- a/tiendaweb/principal/Templates/productos_admin.html
+++ b/tiendaweb/principal/Templates/productos_admin.html
@@ -59,7 +59,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <p>Una vez borrado perdera toda la información</p>
+                <p>Una vez borrado perderá toda la información</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -74,5 +74,5 @@
         {%endfor%}
       </div>
     </div>
-    <footer data-bs-theme="dark">©2024 DUOC UC</footer>
+    <footer data-bs-theme="dark" class='footer'>©2024 DUOC UC</footer>
     {% endblock  %}
