--- a/tiendaweb/principal/Templates/agregar_prod.html
+++ b/tiendaweb/principal/Templates/agregar_prod.html
@@ -11,7 +11,7 @@
                 <div class="card-body">
                     <form class="mb-3 row" id="formulario" method="POST" enctype='multipart/form-data'>
                         {% csrf_token %}
-                        <label for="id" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">id producto</label>
+                        <label for="id" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Id producto</label>
                         <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                             <input type="text" id="id" class="form-control"  placeholder="Ingresa id producto" name="id">
                         </div>
@@ -21,10 +21,17 @@
                         </div>
                         <br>
                         <br>
-                        <br>
-                        <label for="categoria" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Categoria</label>
-                        <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                            <input type="text" id="categoria" class="form-control"  placeholder="Ingresa Categoria" name="categoria">
+                        <div class="col-md-3">
+                            <label for="validationCustom04" class="form-label"></label>
+                            <select class="form-select" id="categoria" class="form-control"  placeholder="Ingresa Categoria" name="categoria" required>
+                              <option selected disabled value="">Categoría</option>
+                              <option>PERIFERICOS</option>
+                              <option>CONSOLA</option>
+                              <option>LAPTOP</option>
+                              <option>CELULAR</option>
+                              <option>MONITOR</option>
+                              <option>TABLET</option>
+                            </select>
                         </div>
                     <br>
                     <br>
