--- a/tiendaweb/principal/Templates/modificar_prod.html
+++ b/tiendaweb/principal/Templates/modificar_prod.html
@@ -15,9 +15,19 @@
                         <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                             <input type="text" id="nombre" class="form-control"  placeholder='Ingresa nombre' name="nombre">
                         </div>
-                        <label for="categoria" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Categoria</label>
-                        <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                            <input type="text" id="categoria" class="form-control"  placeholder="Ingresa Categoria" name="categoria">
+                        <br>
+                        <br>
+                        <div class="col-md-3">
+                            <label for="validationCustom04" class="form-label"></label>
+                            <select class="form-select" id="categoria" class="form-control"  placeholder="Ingresa Categoria" name="categoria" required>
+                              <option selected disabled value="">Categoría</option>
+                              <option>PERIFERICOS</option>
+                              <option>CONSOLA</option>
+                              <option>LAPTOP</option>
+                              <option>CELULAR</option>
+                              <option>MONITOR</option>
+                              <option>TABLET</option>
+                            </select>
                         </div>
                     <br>
                     <br>
