Se cambiaron cosas

--- a/tiendaweb/principal/Templates/productos.html
+++ b/tiendaweb/principal/Templates/productos.html
@@ -3,108 +3,103 @@
 {% load humanize %}
 {% block body %}
 
-    <div class="Titulo_prod"><h1 style="text-align: center">{{titulo}}</h1></div>
-    <div id="productosIndex" class="container">
+  <div class="Titulo_prod">
+    <h1 style="text-align: center">{{titulo}}</h1>
+  </div>
+
+  <div id="productosIndex" class="container">
+
+    {% if Productos|length == 0 %}
+      <!-- MENSAJE CUANDO NO HAY PRODUCTOS -->
+      <div class="d-flex justify-content-center align-items-center" style="min-height:60vh;">
+        <p class="fs-5 text-center m-0" style="color: red;">
+          No se encuentra el producto o categoría que buscas.
+        </p>
+      </div>
+    {% else %}
+      <!-- GRID SOLO SI HAY PRODUCTOS -->
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
-        {% if user.is_authenticated%}
-         {% for producto in Productos%}
-          <div class="col">
-            <div id="cards_mas_pequennias">
-              <div class="card h-100">
-                <div id="img_cards">
-                  <a href="{% url 'prodvis' producto.id_producto %}">
-                    <img
-                    src="{{producto.imagen.url}}"
-                    class="card-img-top"
-                      alt="producto"
-                    />
-                  </a>
-                </div>
+
+        {% if user.is_authenticated %}
+          {% for producto in Productos %}
+            <div class="col">
+              <div id="cards_mas_pequennias">
+                <div class="card h-100">
+                  <div id="img_cards">
+                    <a href="{% url 'prodvis' producto.id_producto %}">
+                      <img src="{{producto.imagen.url}}" class="card-img-top" alt="producto"/>
+                    </a>
+                  </div>
                   <div class="card-body">
                     <h5 class="card-title">{{ producto.nombre }}</h5>
-                    <p class="card-text descripcion">
-                      {{ producto.descripcion }}
-                    </p>
+                    <p class="card-text descripcion">{{ producto.descripcion }}</p>
                   </div>
-                  <div class="card-footer" style="text-align: center">
+                  <div class="card-footer text-center">
                     <p style="font-weight: bold">PRECIO: ${{ producto.precio|intcomma }}</p>
                     <hr />
                     <a href="{% url 'agregar_carrito' producto.id_producto %}">
-                      <button
-                        type="button"
-                        class="btn btn-success"
-                        style="margin-bottom: 5px"
-                      >
+                      <button type="button" class="btn btn-success" style="margin-bottom: 5px">
                         AÑADIR AL CARRITO
                       </button>
                     </a>
                   </div>
+                </div>
               </div>
             </div>
-          </div>
-          {%endfor%}
-          {% else %}
-          {% for producto in Productos%}
-          <div class="col">
-            <div id="cards_mas_pequennias">
-              <div class="card h-100">
-                <div id="img_cards">
-                  <a href="{% url 'prodvis' producto.id_producto %}">
-                    <img
-                    src="{{producto.imagen.url}}"
-                    class="card-img-top"
-                      alt="producto"
-                    />
-                  </a>
-                </div>
+          {% endfor %}
+        {% else %}
+          {% for producto in Productos %}
+            <div class="col">
+              <div id="cards_mas_pequennias">
+                <div class="card h-100">
+                  <div id="img_cards">
+                    <a href="{% url 'prodvis' producto.id_producto %}">
+                      <img src="{{producto.imagen.url}}" class="card-img-top" alt="producto"/>
+                    </a>
+                  </div>
                   <div class="card-body">
                     <h5 class="card-title">{{ producto.nombre }}</h5>
-                    <p class="card-text descripcion">
-                      {{ producto.descripcion }}
-                    </p>
+                    <p class="card-text descripcion">{{ producto.descripcion }}</p>
                   </div>
-                  <div class="card-footer" style="text-align: center">
+                  <div class="card-footer text-center">
                     <p style="font-weight: bold">PRECIO: ${{ producto.precio|intcomma }}</p>
                     <hr />
-                    <a>
-                      <button
-                        type="button"
-                        class="btn btn-success"
-                        style="margin-bottom: 5px"
-                        data-bs-toggle="modal"
-                        data-bs-target="#iniciar"
-                      >
-                        AÑADIR AL CARRITO
-                      </button>
-                    </a>
+                    <button type="button" class="btn btn-success" style="margin-bottom: 5px"
+                            data-bs-toggle="modal" data-bs-target="#iniciar">
+                      AÑADIR AL CARRITO
+                    </button>
                   </div>
+                </div>
               </div>
             </div>
-          </div>
-        {%endfor%}
+          {% endfor %}
         {% endif %}
-        <div class="modal" tabindex="-1" id="iniciar">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title">Para añadir un producto debe iniciar sesión</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <p>Inicia sesión o registrate.</p>
-              </div>
-              <div class="modal-footer">
-              <a href="{% url 'login' %}" >
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" style="float: left;">Iniciar Sesión</button>
-              </a>
-              <a href="{% url 'registro' %}" >
-                <button type="button" class="btn btn-success" style="float: right;">Registrarse</button>
-              </a>
-              </div>
-            </div>
-          </div>  
+      </div>
+    {% endif %}
+  </div>
+
+  <!-- MODAL PARA INICIAR SESIÓN -->
+  <div class="modal" tabindex="-1" id="iniciar">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Para añadir un producto debe iniciar sesión</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Inicia sesión o registrate.</p>
+        </div>
+        <div class="modal-footer">
+          <a href="{% url 'login' %}">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Iniciar Sesión</button>
+          </a>
+          <a href="{% url 'registro' %}">
+            <button type="button" class="btn btn-success">Registrarse</button>
+          </a>
         </div>
       </div>
     </div>
-    <footer data-bs-theme="dark" class='footer'>©2024 DUOC UC</footer>
-    {% endblock  %}
+  </div>
+
+  <footer data-bs-theme="dark" class="footer">©2024 DUOC UC</footer>
+{% endblock %}
