--- a/tiendaweb/principal/Templates/index.html
+++ b/tiendaweb/principal/Templates/index.html
@@ -61,15 +61,12 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div
-        class="cuadrado-vista-producto h-100 w-100 mt-3"
-        style="text-align: center"> 
+      <div class="mt-3" style="text-align: center;">
         {% if user.is_authenticated %}
-          <h1>PRODUCTOS DESTACADOS PARA  {{user.first_name}}</h1>
+          <h1>PRODUCTOS DESTACADOS PARA {{user.first_name}}</h1>
         {% else %}
           <h1>PRODUCTOS DESTACADOS</h1>
         {% endif %}
-
       </div>
       <div id="productosIndex" class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
