--- a/tiendaweb/principal/static/style.css
+++ b/tiendaweb/principal/static/style.css
@@ -1,11 +1,24 @@
-body, html{
-    background-image: url(fotos/img_fondo.jpg);
+
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url('/static/fotos/img_fondo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 0;
-    margin: unset;
+    background-attachment: fixed;
+    background-position: center center;
+}
 
-    
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: transparent;
+}
+
+.footer {
+    margin-top: auto;
 }
 
 #cards_mas_pequennias .card {
